--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ DATABASE_URL="prisma+postgres://localhost:51213/?api_key=eyJkYXRhYmFzZVVybCI6InB
 
 ADMIN_PASSWORD=admin123
 PASSWORD_PEPPER=randomstringkey
+
+SESSION_SECRET=randomsessionkey
