--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "biome format ./src",
     "format:fix": "biome format --write ./src",
     "check": "biome check ./src",
-    "check:fix": "biome check --apply ./src"
+    "check:fix": "biome check --apply ./src",
+    "db:clear:book": "ts-node -r tsconfig-paths/register prisma/scripts/clear-book.ts"
   },
   "keywords": [],
   "author": "catc0de1",
