--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts",
-    "build": "node esbuild.config.mjs",
+    "build": "tsc -p tsconfig.build.json",
     "start": "node dist/main.js",
     "lint": "biome lint ./src",
     "lint:fix": "biome lint --apply ./src",
@@ -38,7 +38,6 @@
     "@types/express": "^5.0.6",
     "@types/express-session": "^1.18.2",
     "@types/node": "^25.0.6",
-    "esbuild": "^0.27.2",
     "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
